style(product_cart):fix layout shift when adding product to trolley

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ img .product{
   width: 130px;
   margin-top: 20px;
   margin-left: 2px ;
+  position: absolute;
 }
 
 .cartIcon{
@@ -109,6 +110,7 @@ h5 {
   overflow: hidden;
   margin-left: 18px;
   margin-top: 12px;
+  position: relative;
 }
 
 .product_cart img {
